progs/tests/tuple/fail_out_of_bounds.sy
start :: fn {
    a := (1, 2)
    a[2]
}

// error: #IndexOutOfBounds(_, 2, 2)
